[package]
name = "m3u-splitter"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }

[dev-dependencies]
tempfile = "3.8"

[profile.release]
# Enable link-time optimization for smaller binaries
lto = true
# Optimize for size (optional - comment out for maximum performance)
# opt-level = "z"
# strip = true
